--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="header__logo-img-cont">
             <img
               src="./assets/png/pfp.png"
-              alt="Image"
+              alt="My logo"
               class="header__logo-img"
             />
           </div>
@@ -86,7 +86,7 @@
         <h1 class="heading-primary">I am Scodecraft</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Web Designer / Freelancer <a href="https://github.com/Scodecraft20">See My Projects</a>  on github. Contact me via email: Scodecrat20@gmai.com, or scroll down to the <a href="Scodecraft20@gmail.com>contact</a> page.
+            Web Designer | Freelancer <a href="https://github.com/Scodecraft20">See My Projects</a>  on github. Contact me via email: Scodecrat20@gmai.com, or scroll down to the <a href="Scodecraft20@gmail.com>contact</a> page.
           </p>
         </div>
         <div class="home-hero__cta">
@@ -127,14 +127,14 @@
               <p class="about__content-details-para">
                 Hey! It's
                 <strong>Scoderaft20@mail.com</strong>
-                and I'm a <strong> professonal ebsit designer and developer. </strong> I've done
+                and I'm a <strong> professonal website designer and developer. </strong> I've done
                 projects for agencies, consulted for startups, and collaborated
                 with talented people to create
                 <strong>professional website </strong>
                 for both business and consumer use.
               </p>
               <p class="about__content-details-para">
-                If you want to hire me to design an develop a wedsite , just make a demand, ill do it.
+                If you want to hire me to design an develop a website , just make a demand, i'll do it.
                 <strong>contact</strong> me here.
               </p>
             </div>
@@ -147,8 +147,8 @@
             <div class="skills">
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
-              <div class="skills__skill">Discord bot devopment</div>
-              <div class="skills__skill">Python</div>
+              <div class="skills__skill">Website Design and Development</div>
+              <div class="skills__skill">SEO</div>
               <div class="skills__skill">Github</div>
             </div>
           </div>
@@ -175,7 +175,7 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">ww.edenspace.com</h3>
+              <h3 class="projects__row-content-title">www.edenspace.com</h3>
               <p class="projects__row-content-desc">
                 A clean and modern portfolio website showcasing my web design skills.
               </p>
@@ -199,7 +199,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Discord multipurpose bot: The source code to every command.</h3>
               <p class="projects__row-content-desc">
-                "More npdates coming soon!". link here: https://github.com/pogrammar/
+                "More updates coming soon!". link here: https://github.com/pogrammar/
               </p>
               <a
                 href="./github.com/Scodecraft20/my-portfolio-Scodecraft"
@@ -271,7 +271,7 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">betches.py</h4>
+            <h4 class="heading heading-sm text-lt">Scodecraft20</h4>
             <p class="main-footer__short-desc">
               Web Designer | Graphics Designer | Freelancer
             </p>
